[package]
name = "discord-chatgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
discord-flows = "0.1.2"
dotenv = "0.15.0"
flowsnet-platform-sdk = "0.1.1"
openai-flows = "0.2.3"
serde_json = "1.0.93"
store-flows = "0.2.1"
